project('dp-school', 'cpp', default_options: ['-std=c++20'])

add_global_arguments('-std=c++20', language: 'cpp')

executable('easy_range', ['bin_cpp/easy_range.cpp'])
executable('fib_last', ['bin_cpp/fib_last.cpp'])
executable('fib', ['bin_cpp/fib.cpp'])
executable('trib', ['bin_cpp/trib.cpp'])
executable('tricky_range', ['bin_cpp/tricky_range.cpp'])
